# vo-models

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  LICENSE  README.md  environment.yml  generate_examples.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_run.yml  publish.yml
docs/_static/css/: custom.css
docs/source/: conf.py  index.rst  new.py
docs/source/_static/styles/: furo_override.css
docs/source/pages/: installation.rst  quickstart.rst
docs/source/pages/api/: index.rst  registry_interfaces_api.rst  tapregext_api.rst  uws_api.rst  vodataservice_api.rst  voregistry_api.rst  voresource_api.rst  vosi_api.rst
docs/source/pages/protocols/: index.rst  tapregext.rst  uws.rst  vodataservice.rst  voresource.rst  vosi.rst
examples/snippets/tapregext/: tapregext.py
examples/snippets/uws/: uws.py
examples/snippets/vodataservice/: vodataservice.py
examples/snippets/voresource/: voresource.py
examples/snippets/vosi/: availability.py  capabilities.py  tables.py
tests/: generics_test.py
tests/registry_interfaces/: RegistryInterface-1.0.xsd
tests/tapregext/: TAPRegExt-v1.0-with-erratum1.xsd  tapregext_models_test.py
tests/uws/: UWS-Schema-V1.0.xsd  __old__uws_models_test.py  models_test.py  uws_models_test.py
tests/vodataservice/: VODataService-v1.2.xsd  vodataservice_models_test.py
tests/voevent/: voevent_test.py
tests/voregistry/: VORegistry-1.1.xsd  voregistry_models_test.py
tests/voresource/: VOResource-v1.1.xsd  voresource_models_test.py  voresource_types_test.py
tests/vosi/: availability_test.py  capabilities_test.py  tables_test.py
vo/models/openapi/uws/: uws.yml
vo/models/xml/: generics.py  generics_test.py
vo/models/xml/uws/: __init__.py  __old__uws_models.py  __old__uws_types.py  models.py  types.py
vo/models/xml/xlink/: __init__.py  xlink.py
vo_models/adql/: misc.py
vo_models/openapi/uws/: components.yml
vo_models/registry_interfaces/: __init__.py  models.py
vo_models/stc/: models.py
vo_models/tapregext/: __init__.py  models.py
vo_models/uws/: __init__.py  models.py  types.py
vo_models/vo_models/: vo_models_test.py
vo_models/vo_models/vodataservice/: __init__.py  models.py  vodataservice_models_test.py
vo_models/vo_models/vosi/: __init__.py  availability.py  availability_test.py  tables.py  tables_test.py
vo_models/vocab/: __init__.py  vocab.py
vo_models/vodataservice/: __init__.py  models.py  types.py  vodataservice_models_test.py
vo_models/voevent/: __init__.py  models.py  types.py
vo_models/voregistry/: __init__.py  models.py  types.py
vo_models/voresource/: __init__.py  models.py  types.py
vo_models/vosi/: __init__.py
vo_models/vosi/availability/: __init__.py  models.py
vo_models/vosi/capabilities/: __init__.py  models.py
vo_models/vosi/tables/: __init__.py  models.py
vo_models/xlink/: __init__.py
vo_models/xml/: __init__.py  generics.py
vo_models/xml/uws/: __init__.py  models.py  types.py
vo_models/xml/vodataservice/: models.py
vo_models/xml/voresource/: __init__.py  types.py
vo_models/xml/vosi/: availability.py
vo_models/xml/xlink/: __init__.py  xlink.py
