[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vo-models"
version = "0.4.2.dev0"
authors = [
    {name = "Joshua Fraustro", email="jfraustro@stsci.edu"},
    {name = "MAST Archive Developers", email="archive@stsci.edu"}
]
description = "Pydantic data models for IVOA protocols"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>2",
    "pydantic-xml[lxml]>=2.6.0",
    ]

classifiers = [

    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",

    "License :: OSI Approved :: MIT License",
]
keywords = [
    "ivoa",
    "pydantic",
    "pydantic-xml",
    ]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["pylint", "ruff", "pre-commit"]
docs = ["sphinx", "sphinx_design", "furo", "sphinx-copybutton", "toml", "sphinx_autodoc_typehints"]

[project.urls]
Homepage = "https://github.com/spacetelescope/vo-models"
Issues = "https://github.com/spacetelescope/vo-models/issues"

[tool.setuptools.package-data]
"vo_models" = ["py.typed"]

[tool.ruff]
line-length = 120
extend-exclude = ["docs/conf.py"]
